--- a/Youtube_Clone/src/components/styles/Header.css
+++ b/Youtube_Clone/src/components/styles/Header.css
@@ -1,4 +1,3 @@
-
 .yt-navbar{
     display: flex;
     justify-content: space-between;
@@ -7,8 +6,9 @@
     background-color: #fff;
     color: black;
     position: fixed;
-    max-width: 100%;
+    width: 100%;
     box-sizing: border-box;
+    z-index: 100;
 }
 .yt-logo{
     display: flex;
@@ -96,13 +96,35 @@
 .yt-user{
     display: flex;
     align-items: center;
-    gap: 1px;
+    gap: 5px;
+    border: 2px solid rgb(127, 5, 5);
     cursor: pointer;
-    font-size: 17px;
+    font-size: 18px;
+    border-radius: 30px;
+    padding: 1% 3% !important;
+    margin-right: 20px;
+    color: rgb(121, 6, 6);
+    text-decoration: none;
+}
+.yt-user p{
+    padding: 0;
+    margin: 0;
+}
+.user-icon{
+    font-size: 20px;
 }
 
 .yt-content{
     display: flex;
-    padding-top: 60px;
-    overflow-x: hidden;
+    
 }
+.sidebarA-active{
+    padding-top: 60px;
+    position: fixed;
+}
+
+.sidebarB-active {
+    padding-top: 60px;
+    position: fixed;
+}
+
