--- a/Youtube_Clone/src/components/styles/Sidebar.css
+++ b/Youtube_Clone/src/components/styles/Sidebar.css
@@ -6,7 +6,7 @@
     height: 87.7vh;
     background-color: white;
     color: black;
-    position: sticky;
+    position: fixed;
     overflow-y: auto;
     padding: 1%;
     scrollbar-width: none; /* Firefox */
